--- a/src/root.css
+++ b/src/root.css
@@ -9,13 +9,13 @@
 @font-face {
   font-family: 'Lato';
   font-weight: 400;
-  src: url('./public/fonts/lato/Lato-Regular.ttf');
+  src: url('/fonts/lato/Lato-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Lato';
   font-weight: 700;
-  src: url('./public/fonts/lato/Lato-Bold.ttf');
+  src: url('/fonts/lato/Lato-Bold.ttf');
 }
 
 body {
